# ComfyUI-ZhipuAI-Platform

./: README.md  __init__.py  pyproject.toml  requirements.txt
example/: zhipuai_cogvideo_workflow.json
video_process/: nodes.py
